# yantrikdb-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: PYPI_TRUSTED_PUBLISHER_SETUP.md
yantrikdb/: __init__.py  client.py  types.py
