[project]
name = "yantrikdb-client"
version = "0.2.1"
description = "Python client SDK for YantrikDB — the cognitive memory database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
embed = ["sentence-transformers>=2.7"]

[project.urls]
Homepage = "https://github.com/yantrikos/yantrikdb-client"
Repository = "https://github.com/yantrikos/yantrikdb-client"
Issues = "https://github.com/yantrikos/yantrikdb-client/issues"
Server = "https://github.com/yantrikos/yantrikdb-server"
Engine = "https://github.com/yantrikos/yantrikdb"
